the sky background rotates to slowly when turning player in drawSky function.

--- a/3dsageraycast/3dsageraycast.vcxproj
+++ b/3dsageraycast/3dsageraycast.vcxproj
@@ -145,6 +145,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="textures\All_Textures.ppm" />
+    <None Include="textures\Sky.ppm" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
