--- a/3dsageraycast/3dsageraycast.vcxproj.filters
+++ b/3dsageraycast/3dsageraycast.vcxproj.filters
@@ -27,4 +27,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="textures\All_Textures.ppm" />
+    <None Include="textures\Sky.ppm" />
+  </ItemGroup>
 </Project>
