the drawsprite function is the issue

--- a/3dsageraycast/3dsageraycast.vcxproj
+++ b/3dsageraycast/3dsageraycast.vcxproj
@@ -146,8 +146,12 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="textures\All_Texture.ppm" />
     <None Include="textures\All_Textures.ppm" />
+    <None Include="textures\lose.ppm" />
     <None Include="textures\Sky.ppm" />
+    <None Include="textures\title.ppm" />
+    <None Include="textures\win.ppm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
